# Rust4D

./: .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
archive/: 2026-01-28-2018-config-consolidation.md  2026-01-28-wave-4-detailed-implementation.md  2026-01-29-1829-multi-swarm-skill.md
archive/2026-01-28-cleanup-implementation/: hive-mind-cleanup.md  wave-1-report.md  wave-3-report.md  wave-4-report.md
archive/2026-01-28-codebase-cleanup/: 2026-01-28-wave-3-documentation-report.md
archive/2026-01-28-codebase-review/: core-reviewer-report.md  final-synthesis-report.md  hive-mind-codebase-review.md  physics-reviewer-report.md  render-reviewer-report.md  roadmap-reviewer-report.md
archive/2026-01-28-config-followup/: hive-mind-config-analysis.md
archive/2026-01-28-wave-planning/: codebase-agent.md  hive-mind-planning.md
config/: default.toml  user.toml.example
crates/rust4d_core/: Cargo.toml
crates/rust4d_input/: Cargo.toml
crates/rust4d_math/: Cargo.toml
crates/rust4d_physics/: Cargo.toml
crates/rust4d_render/: Cargo.toml
docs/: README.md  developer-guide.md  getting-started.md  user-guide.md
examples/: 01_hello_tesseract.rs  02_multiple_shapes.rs  03_physics_demo.rs  04_camera_exploration.rs  README.md
ideas/multi-swarm/: multi-swarm.md
plans/: 2026-01-30-engine-game-split.md  triangle-winding-order.md
plans/engine-roadmap-2026/: 00-index.md  engine-game-split.md  execution-plan.md  game-roadmap-lua.md  long-term-networking.md  lua-migration-analysis.md  phase-1-foundation.md  post-split-phase-1-combat-core.md  split-phases-1-5.md  (+6 more)
reports/: 2026-01-28-1430-wave4-architecture-refactor.md  2026-01-28-2043-config-followup-fixes.md  2026-01-29-1850-scratchpad-migration.md  2026-01-31-1545-roadmap-synthesis.md
scenes/: default.ron  test_chamber.ron
src/: config.rs  lib.rs  main.rs
tests/: config_integration.rs
(+251 files in other folders)
