[workspace]
resolver = "2"
members = [
    "crates/rust4d_math",
    "crates/rust4d_render",
    "crates/rust4d_input",
]

[workspace.dependencies]
wgpu = "24"
winit = "0.30"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.4"
env_logger = "0.11"
log = "0.4"

# Internal crates
rust4d_math = { path = "crates/rust4d_math" }
rust4d_render = { path = "crates/rust4d_render" }
rust4d_input = { path = "crates/rust4d_input" }

[package]
name = "rust4d"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust4d"
path = "src/main.rs"

[dependencies]
rust4d_math.workspace = true
rust4d_render.workspace = true
rust4d_input.workspace = true
wgpu.workspace = true
winit.workspace = true
pollster.workspace = true
env_logger.workspace = true
log.workspace = true
